tests/testcrate/tests/ui/delete_syntax.stderr
error: this method takes 0 parameters but 1 parameter was supplied
  --> $DIR/delete_syntax.rs:45:40
   |
45 |     let _ = sql!(Table.filter(id == 1).delete(id == 1));
   |                                        ^^^^^^

error: aborting due to previous error

